--- a/amazon-clone/public/styles/style.css
+++ b/amazon-clone/public/styles/style.css
@@ -3,3 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html,
+body {
+  background-color: rgb(234, 237, 237);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
