--- a/amazon-clone/src/components/Product/style.module.css
+++ b/amazon-clone/src/components/Product/style.module.css
@@ -38,3 +38,9 @@
   cursor: pointer;
   margin-top: 1rem;
 }
+
+@media screen and (max-width: 768px) {
+  .producInfo > p:first-child {
+    font-size: 12px;
+  }
+}
