--- a/amazon-clone/src/pages/Checkout/style.module.css
+++ b/amazon-clone/src/pages/Checkout/style.module.css
@@ -19,3 +19,17 @@
   padding: 1rem;
   flex: 3;
 }
+
+@media screen and (max-width: 768px) {
+  .checkout {
+    flex-flow: column-reverse;
+  }
+
+  .checkoutLeft > img {
+    height: 4rem;
+    object-fit: fill;
+  }
+  .checkoutTitle {
+    font-size: 18px;
+  }
+}
