--- a/amazon-clone/src/components/Subtotal/style.module.css
+++ b/amazon-clone/src/components/Subtotal/style.module.css
@@ -31,3 +31,10 @@
   cursor: pointer;
   border-radius: 5px;
 }
+
+@media screen and (max-width: 768px) {
+  .subtotal {
+    margin: auto;
+    margin-top: 10px;
+  }
+}
