--- a/amazon-clone/src/pages/Home/style.module.css
+++ b/amazon-clone/src/pages/Home/style.module.css
@@ -10,6 +10,7 @@
   width: 100%;
   height: 400px;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  margin-bottom: 1rem;
 }
 
 .Row {
@@ -17,4 +18,10 @@
   z-index: 1;
   gap: 5px;
   width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .Row {
+    flex-flow: column;
+  }
 }
